images added and color contrast corrected

--- a/project/styles/small.css
+++ b/project/styles/small.css
@@ -434,6 +434,10 @@ p {
     animation: fadeIn 0.3s ease;
 }
 
+.modal-content ul {
+    list-style-type: none;
+}
+
 .modal-content img {
     width: 100%;
     border-radius: 10px;
@@ -442,8 +446,8 @@ p {
 
 .modal-content .close {
     position: absolute;
-    top: 10px;
-    right: 15px;
+    top: -13px;
+    right: 1px;
     font-size: 2rem;
     cursor: pointer;
 }
@@ -493,7 +497,6 @@ p {
 }
 
 .testimonials {
-    background-color: #fdf6f0;
     padding: 60px 20px;
     text-align: center;
     border-radius: 8px;
@@ -501,7 +504,6 @@ p {
 
 .testimonials h2 {
     font-size: 2.5rem;
-    color: #ff6b81;
     margin-bottom: 40px;
 }
 
@@ -510,7 +512,7 @@ p {
     margin: 0 auto 40px;
     padding: 20px;
     border-radius: 20px;
-    background-color: #fff;
+    background-color: var(--color-white);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease;
 }
@@ -534,7 +536,7 @@ p {
 .testimonial span {
     display: block;
     margin-top: 10px;
-    color: #ff6b81;
+    color: var(--color-text);
     font-weight: bold;
 }
   
